inizio parte playlist

--- a/index.html
+++ b/index.html
@@ -25,31 +25,37 @@
         <div class="s_nav_top">
           <!-- logo normale -->
           <div class="nav_logo">
-            <img src="assets/img/logo.svg" alt="" />
-          </div>
+            <img class="nav_lg" src="assets/img/logo.svg" alt="" />
+            <!-- logo mobile -->
 
-          <!-- logo mobile -->
-          <div class="nav_lm">
-            <img src="assets/img/logo-small.svg" alt="" />
+            <img class="margin_left20 nav_lm" src="assets/img/logo-small.svg" alt="" />
           </div>
+          <!-- primo menu con le immagini  -->
           <ul>
-            <li class="colorebianco">
-              <i class="fas fa-home"></i>
-              <span>Home</span>
+            <li>
+              <img class="margin_left20" src="assets/img/home.svg" alt="" />
+              <a>Home</a>
               <div class="barra_green"></div>
             </li>
 
-            <li class="colorebianco">
-              <i class="fas fa-search"></i>
-              <span>Cerca</span>
+            <li>
+              <img class="margin_left20" src="assets/img/search.svg" alt="" />
+              <a>Cerca</a>
               <div class="barra_green"></div>
             </li>
 
-            <li class="colorebianco">
-              <i class="fas fa-book"></i>
-              <span>La tua libreria</span>
+            <li>
+              <img
+                class="margin_left20"
+                src="/assets/img/libreria.svg"
+                alt=""
+              />
+              <a>La tua libreria</a>
               <div class="barra_green"></div>
             </li>
+          </ul>
+          <ul>
+            
           </ul>
         </div>
         <!-- /parte superiore della navbar laterale -->
@@ -71,27 +77,27 @@
           <ul>
             <li>
               <a href="#">IN EVIDENZA</a>
-              <div class="barra_green"></div>
+              <div class="barra_green2"></div>
             </li>
             <li>
               <a href="#">PODCAST</a>
-              <div class="barra_green"></div>
+              <div class="barra_green2"></div>
             </li>
             <li>
               <a href="#">CLASSIFICHE</a>
-              <div class="barra_green"></div>
+              <div class="barra_green2"></div>
             </li>
             <li>
               <a href="#">GENERI E MOOD</a>
-              <div class="barra_green"></div>
+              <div class="barra_green2"></div>
             </li>
             <li>
               <a href="#">NUOVE USCITE</a>
-              <div class="barra_green"></div>
+              <div class="barra_green2"></div>
             </li>
             <li>
               <a href="#">SCOPRI</a>
-              <div class="barra_green"></div>
+              <div class="barra_green2"></div>
             </li>
           </ul>
         </div>
@@ -361,11 +367,8 @@
         <ul>
           <li>
             <i class="fas fa-random"></i>
-            <i class="fas fa-arrow-alt-to-left"></i>
           </li>
-          <li>
-            
-          </li>
+          <li></li>
         </ul>
       </div>
 
