errore crea nuova platlist

--- a/index.html
+++ b/index.html
@@ -54,13 +54,42 @@
               <div class="barra_green"></div>
             </li>
           </ul>
-          <ul>
-            
-          </ul>
+          <h4 class="colorebianco">PLAYLIST</h4>
+          <div class="playlist_name">
+
+            <ul >
+              <!-- li con il crea playlsit e l'immagine al lato -->
+              <li class="New_p"> 
+                <span>Crea Platlist</span>
+              </li>
+              <li> 
+                <span>Nome Playlist</span>
+              </li>
+              <li> 
+                <span>Nome Playlist</span>
+              </li>
+              <li> 
+                <span>Nome Playlist</span>
+              </li>
+              <li> 
+                <span>Nome Playlist</span>
+              </li>
+              <li> 
+                <span>Nome Playlist</span>
+              </li>
+              <li> 
+                <span>Nome Playlist</span>
+              </li>
+              <li> 
+                <span>Nome Playlist</span>
+              </li>
+            </ul>
+          </div>
         </div>
         <!-- /parte superiore della navbar laterale -->
 
         <div class="s_nav_botton"></div>
+
       </div>
       <!-- /nav bar laterale -->
 
