modifiche altezza interna nav lat top problema height generale

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="margin_left20 nav_lm" src="assets/img/logo-small.svg" alt="" />
           </div>
           <!-- primo menu con le immagini  -->
-          <ul>
+          <ul class="margin_botton20">
             <li>
               <img class="margin_left20" src="assets/img/home.svg" alt="" />
               <a>Home</a>
@@ -54,36 +54,131 @@
               <div class="barra_green"></div>
             </li>
           </ul>
-          <h4 class="colorebianco">PLAYLIST</h4>
-          <div class="playlist_name">
 
-            <ul >
-              <!-- li con il crea playlsit e l'immagine al lato -->
-              <li class="New_p"> 
-                <span>Crea Platlist</span>
-              </li>
-              <li> 
-                <span>Nome Playlist</span>
-              </li>
-              <li> 
-                <span>Nome Playlist</span>
-              </li>
-              <li> 
-                <span>Nome Playlist</span>
-              </li>
-              <li> 
-                <span>Nome Playlist</span>
-              </li>
-              <li> 
-                <span>Nome Playlist</span>
-              </li>
-              <li> 
-                <span>Nome Playlist</span>
-              </li>
-              <li> 
-                <span>Nome Playlist</span>
-              </li>
-            </ul>
+          <div class="playlist">
+
+            <h4 class="colorebianco margin_left20 margin_botton10">PLAYLIST</h4>
+            <div class="New_p margin_botton10"> 
+              <span class="colorebianco">Crea Platlist</span>
+            </div>
+            <div class="playlist_name">
+  
+              <ul >
+                <!-- li con il crea playlsit e l'immagine al lato -->
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                <li> 
+                  <span>Nome Playlist</span>
+                </li>
+                
+              </ul>
+            </div>
           </div>
         </div>
         <!-- /parte superiore della navbar laterale -->
