--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
           <div class="playlist">
 
             <h4 class="colorebianco margin_left20 margin_botton10">PLAYLIST</h4>
-            <div class="New_p margin_botton10"> 
-              <span class="colorebianco">Crea Platlist</span>
+            <div class="New_p margin_botton10 margin_left20"> 
+              <span class="colorebianco">Crea Playlist</span>
             </div>
             <div class="playlist_name">
   
-              <ul >
+              <ul>
                 <!-- li con il crea playlsit e l'immagine al lato -->
                 <li> 
                   <span>Nome Playlist</span>
@@ -86,104 +86,25 @@
                 <li> 
                   <span>Nome Playlist</span>
                 </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                <li> 
-                  <span>Nome Playlist</span>
-                </li>
-                
               </ul>
             </div>
           </div>
         </div>
         <!-- /parte superiore della navbar laterale -->
 
-        <div class="s_nav_botton"></div>
+        <div class="s_nav_botton">
+          <div class="installa_app coloregrigio">
+            <i class="far fa-arrow-alt-circle-down"></i>
+            <span> Installa app</span>
+          </div>
+          <div class="profile margin_top5">
+
+            <div class="img_profile margin_right10">
+              <img src="assets/img/profile.svg" alt="">
+            </div>
+            <span class="colorebianco">John Doe</span>
+          </div>
+        </div>
 
       </div>
       <!-- /nav bar laterale -->
@@ -488,12 +409,21 @@
       </div>
 
       <div class="footer-center">
-        <ul>
-          <li>
-            <i class="fas fa-random"></i>
-          </li>
-          <li></li>
-        </ul>
+        <div class="icon">
+          <i class="fas fa-random"></i>
+        </div>
+        <div class="icon">
+          <i class="fas fa-step-backward"></i>
+        </div>
+        <div class="icon">
+          <i class="far fa-play-circle"></i>
+        </div>
+        <div class="icon">
+          <i class="fas fa-step-forward"></i>
+        </div>
+        <div class="icon">
+          <i class="fas fa-redo-alt"></i>
+        </div>
       </div>
 
       <div class="footer-right">
