--- a/index.html
+++ b/index.html
@@ -120,27 +120,27 @@
         <!-- SELEZIONE -->
         <div class="content_nav">
           <ul>
-            <li>
+            <li class="margin_right10">
               <a href="#">IN EVIDENZA</a>
               <div class="barra_green2"></div>
             </li>
-            <li>
+            <li class="margin_right10">
               <a href="#">PODCAST</a>
               <div class="barra_green2"></div>
             </li>
-            <li>
+            <li class="margin_right10">
               <a href="#">CLASSIFICHE</a>
               <div class="barra_green2"></div>
             </li>
-            <li>
+            <li class="margin_right10">
               <a href="#">GENERI E MOOD</a>
               <div class="barra_green2"></div>
             </li>
-            <li>
+            <li class="margin_right10">
               <a href="#">NUOVE USCITE</a>
               <div class="barra_green2"></div>
             </li>
-            <li>
+            <li class="margin_right10">
               <a href="#">SCOPRI</a>
               <div class="barra_green2"></div>
             </li>
@@ -156,235 +156,7 @@
 
         <!-- ARTISTI PIU' POPOLARI -->
         <!-- /ARTISTI PIU' POPOLARI -->
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum soluta
-        vero odit, quis explicabo vitae quo voluptatem repellat natus dolore hic
-        temporibus officiis deleniti voluptatibus ipsum sapiente magnam voluptas
-        necessitatibus doloremque molestias ea pariatur! Harum, nemo magni?
-        Repellendus sapiente sunt error quaerat nulla adipisci, earum ut. Eius,
-        autem sequi dolorum sit ab, aspernatur corrupti esse consequuntur, enim
-        iste doloribus optio ipsam rerum maxime hic aliquam voluptatum corporis
-        asperiores sapiente recusandae nesciunt officia molestias libero!
-        Expedita animi, esse sit voluptas consectetur itaque quam repellat
-        tempora excepturi odio ullam voluptatibus totam natus aliquid Lorem
-        ipsum dolor sit amet consectetur adipisicing elit. Animi perferendis
-        reiciendis tempore iste nesciunt. Inventore dignissimos at nihil rem
-        aliquam assumenda officiis, mollitia vero culpa quae nisi pariatur ab
-        iste debitis. Aliquam doloremque iure repellat, quam sed nulla illo
-        cumque necessitatibus voluptatum delectus quas harum laboriosam nesciunt
-        saepe et ad? Voluptas asperiores nobis illum perspiciatis consequatur!
-        Ipsum quaerat molestias modi eius eligendi repudiandae eaque amet
-        architecto beatae? Numquam magnam et mollitia blanditiis illum rerum
-        tempore distinctio facere cum velit quae, accusamus explicabo porro
-        quis! Tenetur doloremque, molestias vitae earum qui est, porro
-        dignissimos inventore mollitia pariatur quasi, praesentium excepturi id
-        vel! Consectetur, aliquid rem quo nulla ut voluptatibus libero odit
-        veniam laborum sed cumque sint reiciendis, adipisci qui nihil totam
-        obcaecati harum aperiam enim rerum excepturi impedit a? Dolores,
-        deserunt sint? Fuga blanditiis a nulla ut! Delectus perferendis ipsa
-        distinctio nam porro eaque voluptate. Autem nesciunt quibusdam rerum
-        ratione laborum. Numquam aperiam tempora excepturi possimus magni quidem
-        laudantium ut dolore itaque eius similique nulla iure omnis non id
-        maiores, vero eos magnam voluptatibus neque porro distinctio quia atque
-        at. Exercitationem, repudiandae ad! Ex accusamus vitae nemo dolorum vero
-        corporis sit delectus deleniti aliquid consequatur totam pariatur, sequi
-        iste iure repellendus quasi cum ullam autem, officia reprehenderit
-        assumenda possimus alias maxime! Quos enim facilis alias ratione est
-        odio, voluptates dolorem optio itaque. Reiciendis praesentium ducimus
-        inventore! Quas ullam esse velit ab quisquam? Tempore quidem autem quae,
-        recusandae, officia doloremque dolor porro rem necessitatibus blanditiis
-        ut asperiores et magnam. Impedit vitae quam eius quaerat amet earum,
-        ipsam maiores, consequuntur nostrum, magnam architecto dicta adipisci?
-        Quia soluta nemo necessitatibus saepe quod reiciendis assumenda quae
-        minima veniam quasi, aut nam laborum! Molestias, enim similique? Dolorum
-        molestiae voluptatibus corrupti dignissimos ab cumque debitis aperiam
-        similique, assumenda enim quisquam inventore architecto quam voluptatum
-        illo quaerat ullam doloribus vel ipsa sapiente accusantium nobis labore.
-        Commodi et temporibus quos expedita doloremque? In obcaecati fugiat
-        voluptatibus iure maxime sapiente dicta quia nisi! Explicabo ducimus
-        asperiores totam fuga accusantium, quos id facilis officia, possimus
-        ipsa iure molestiae, dolor aliquid. Impedit dicta beatae saepe nesciunt
-        corrupti eius temporibus soluta quos rem. Sequi itaque autem error
-        assumenda illum voluptates modi commodi in soluta veniam nemo nulla
-        quisquam voluptatum totam blanditiis quo, sunt id, pariatur repudiandae?
-        Laboriosam iure voluptates aperiam magni explicabo minima corporis quis
-        totam tempore assumenda voluptas vero harum deleniti quidem consequatur,
-        ullam distinctio consectetur aut corrupti temporibus et iste perferendis
-        officiis dignissimos. Fugiat facere, ullam, libero ipsa enim explicabo
-        minus, ab distinctio dolor reiciendis iusto doloribus illum rerum
-        voluptatem! Omnis autem assumenda ipsam quaerat placeat dignissimos
-        quisquam nostrum reiciendis eligendi quia a, rem aliquam molestiae culpa
-        cumque hic nulla sint! Saepe earum delectus voluptatibus ab facilis!
-        Corporis adipisci, illum sequi mollitia ea, praesentium harum nostrum
-        maiores reprehenderit aspernatur totam ratione enim perspiciatis vel
-        possimus quaerat nihil ipsam distinctio, quasi vitae cum. Nulla
-        laudantium libero voluptas atque facilis, perferendis quibusdam odio,
-        incidunt earum placeat vitae sunt veritatis sequi tempora molestias
-        porro nihil, natus laborum suscipit fugit harum sint eius iure optio.
-        Nobis autem quis ea? Magnam odit numquam officiis architecto consectetur
-        nostrum excepturi ex nisi facilis non facere quisquam, aliquid a, quas
-        deserunt optio voluptas accusantium autem doloremque natus dicta?
-        Asperiores praesentium iste unde in quaerat excepturi placeat pariatur
-        neque, eveniet delectus repellat quidem suscipit ex itaque consectetur.
-        Eius fugit minus eaque optio, doloremque sapiente ab accusamus
-        voluptatum, mollitia impedit quam dicta sequi, id recusandae facere
-        omnis aperiam numquam architecto cum! Nihil ipsa illum laboriosam
-        suscipit eum. Veritatis atque molestiae quas sunt, quae nihil aperiam
-        vero, odit reprehenderit officiis qui perferendis possimus obcaecati
-        voluptatum ipsa! Modi recusandae qui similique eligendi ipsam mollitia
-        accusantium omnis magnam, illo dicta quae necessitatibus explicabo
-        blanditiis magni. Quod provident ipsam consectetur, molestiae odit
-        laudantium. Possimus voluptatum officiis, doloribus voluptatibus
-        quibusdam placeat nesciunt fugit dolorum aliquam officia. Dolor facilis
-        minima vitae exercitationem obcaecati consequatur, veritatis quos nam
-        laborum esse consequuntur sed libero possimus voluptates minus, repellat
-        ipsum quia reprehenderit! Expedita sint quibusdam rerum? Nam qui
-        inventore sint, voluptatum voluptates explicabo accusamus modi minus
-        fugit tempora dolore eos esse, assumenda atque blanditiis? Voluptates
-        voluptas suscipit, quisquam enim tenetur perspiciatis distinctio
-        blanditiis nemo consectetur repellat! Labore molestiae sed accusantium
-        eius expedita iste dignissimos voluptatibus velit, harum nemo numquam
-        iure ipsam, debitis voluptates soluta eum, vitae qui. Nemo natus dolor
-        nesciunt delectus id atque odio sed corrupti porro quisquam dolores
-        deserunt vero culpa officia dicta maxime saepe harum, consectetur quo
-        ipsa error dolorum, vitae eum voluptates? Aliquid eaque rerum minus qui
-        hic illo iste voluptatum nam quam facilis amet sit, modi, blanditiis
-        inventore beatae incidunt commodi nemo illum quisquam suscipit iure
-        provident aut nostrum excepturi! Ipsum saepe molestias ex, voluptatem
-        quos aut quia distinctio voluptates sed suscipit aliquam velit. Sapiente
-        dolore laboriosam quis dolorem nihil, illo commodi consequatur
-        voluptatibus dicta unde nobis corrupti odit quibusdam alias repudiandae
-        molestias vitae earum explicabo, culpa facere in cum, ex magni non? Est,
-        eum nulla. Voluptatibus blanditiis numquam itaque cumque error fugit
-        aspernatur, odit iste nostrum voluptas non nisi at, veritatis magnam
-        dignissimos, cupiditate velit neque repudiandae explicabo est provident
-        debitis sapiente. Aperiam, quasi? Provident consequatur consequuntur
-        iure asperiores, perferendis, magnam minus facere quisquam, earum beatae
-        culpa laudantium temporibus perspiciatis suscipit voluptas laboriosam
-        doloribus rerum est fugit. Quis quam sit voluptate ex perferendis quos
-        in fugit facere eveniet ad ducimus autem ipsum repudiandae rem animi
-        quidem pariatur impedit, nihil voluptatum eius. Qui, repellendus?
-        Consequuntur, nobis ipsum. Vel, iure officia, quam ad excepturi et
-        dignissimos sint nam animi facere id enim rem, consequatur quasi? Nemo,
-        consectetur at expedita odio dolore delectus incidunt! Quos rerum eos
-        hic ab deserunt voluptatibus consectetur deleniti. Facilis, ea cum? Ipsa
-        molestiae distinctio quam voluptas facere ratione quos libero magnam
-        sapiente qui, impedit minus, vel ea fugit, blanditiis harum sed nostrum
-        ut dolor nesciunt perspiciatis animi? Iusto obcaecati iure perspiciatis
-        laudantium eligendi nesciunt quaerat consequatur rem laborum
-        perferendis, velit, soluta similique quos! Iste dolorum ducimus officiis
-        earum, repellendus aperiam tempore quo aspernatur laudantium odit, amet
-        velit cupiditate delectus molestias, quae dicta. Consequatur praesentium
-        dolore suscipit necessitatibus consequuntur ex in alias dolorem?lorem500
-        ad delectus laudantium? Aliquam, laboriosam quos perspiciatis veniam
-        voluptatem sed facilis repudiandae? Molestias, architecto cupiditate
-        debitis ad facilis beatae reiciendis Lorem ipsum, dolor sit amet
-        consectetur adipisicing elit. Vitae illo beatae nostrum ut mollitia in
-        accusamus quos impedit reprehenderit eos. Cum suscipit minus dignissimos
-        obcaecati eveniet rem recusandae ratione officia veniam repudiandae.
-        Eaque sequi, commodi adipisci, minima voluptatem quo incidunt ipsum
-        dolorum consequatur pariatur id dolor, mollitia repellat molestiae eos
-        expedita sed vitae! Totam iusto itaque accusamus earum, incidunt ut
-        laudantium ea aperiam provident vel! Eligendi, optio repellendus ad
-        delectus ab nulla blanditiis modi tenetur alias quaerat quisquam,
-        laborum voluptates enim. Odio sunt inventore magnam repellendus ab
-        veniam dolor natus quasi a dignissimos id, corporis, ad vel tenetur vero
-        libero aliquam asperiores officiis quis consectetur deleniti earum hic
-        architecto. Minus nesciunt, placeat atque accusantium deleniti quis,
-        necessitatibus non possimus quam deserunt quia maiores optio nisi velit,
-        hic adipisci et? Esse dolore qui fuga blanditiis. Quas, iste sit.
-        Accusamus optio nemo magnam eveniet magni. Quaerat, quibusdam repellat?
-        Consequatur voluptate, enim omnis sunt nam nemo, officiis maxime natus
-        ab quia in voluptatem rerum sed commodi nulla sint rem dignissimos ipsum
-        dolor. Nam est sit excepturi quam nemo mollitia velit ipsam voluptate
-        nesciunt! Tempore enim voluptatem neque harum! Mollitia blanditiis ipsam
-        debitis commodi ipsa! Rerum, quos distinctio necessitatibus repellendus
-        ipsa incidunt quo harum fugiat quasi numquam enim sed culpa dignissimos?
-        Vero debitis, tempore, numquam qui eveniet alias harum provident
-        doloremque beatae aperiam, sapiente eaque voluptates libero sint iste
-        amet laborum iure dignissimos. Saepe ipsum qui, repudiandae, soluta
-        sint, totam rerum ut velit aspernatur nobis accusantium molestiae?
-        Possimus, aliquid ducimus corrupti corporis excepturi officiis quaerat
-        praesentium et mollitia magnam esse architecto eligendi qui labore
-        placeat ex unde. Placeat, est repudiandae aspernatur eum doloremque,
-        amet tenetur voluptates sapiente, expedita temporibus magni ipsa
-        recusandae tempore assumenda laudantium ad odit quidem architecto
-        dolorem? Debitis provident quaerat, mollitia, nemo inventore autem
-        explicabo accusamus minus pariatur dicta qui eaque perferendis molestias
-        vitae sapiente quod eligendi error? Quo recusandae, mollitia dignissimos
-        temporibus hic neque atque iusto, debitis, est blanditiis nesciunt at
-        facilis eos. Nulla eius maxime architecto natus cupiditate ad sapiente
-        consectetur dolorum eligendi minima sunt sint quo possimus iste, vero
-        beatae. Veniam eveniet mollitia facere nulla sunt est omnis minus
-        recusandae animi dicta! Dolore commodi error natus enim laborum qui
-        voluptates placeat illo! A, ad obcaecati itaque nobis fugiat eos. Odit
-        ullam doloribus modi fugit recusandae minima numquam laboriosam amet vel
-        sapiente architecto nam harum sunt, consectetur mollitia cum. Esse
-        adipisci quas quasi eius sunt qui. A dolorem, animi quos doloribus iusto
-        porro atque libero ratione provident. Repellendus assumenda cupiditate
-        fuga asperiores iste vero debitis doloribus. Iusto, quo? Illo, impedit
-        voluptatem laboriosam doloremque aliquam maxime expedita architecto
-        eveniet temporibus tenetur necessitatibus omnis explicabo quis repellat
-        perferendis nulla vitae itaque, nesciunt laborum, labore nihil voluptas
-        enim mollitia. Sapiente dolorum perspiciatis numquam id accusantium eos
-        excepturi omnis vitae voluptas earum et consectetur eaque cumque,
-        accusamus, veniam eius? Aperiam, dolorum inventore. Ea iure similique,
-        dolore autem cumque maxime, in voluptas dicta accusantium vel totam ex.
-        Praesentium autem ipsa fugiat deleniti suscipit eveniet, adipisci
-        laudantium quibusdam inventore ipsam tenetur at facilis libero possimus
-        minima architecto ut eligendi et magni quam recusandae cumque quia?
-        Explicabo sint exercitationem itaque nulla deleniti eos, at ad laborum
-        doloribus quisquam ea animi impedit, veniam esse quasi ratione molestias
-        in autem, dicta architecto! Necessitatibus illo dolorum facere, quae
-        ducimus magnam aut iusto architecto harum error dolor eos cum, aliquid
-        totam distinctio, cupiditate fuga maxime sapiente dolores perferendis
-        eaque quibusdam nulla ipsam culpa! Error ea quae quaerat ratione vel
-        dolor qui distinctio unde odit quia repellendus ipsa accusamus expedita
-        eum illo dicta laborum dolorem et perferendis quam illum, culpa
-        obcaecati? Repellendus laudantium vitae unde repellat atque? Optio natus
-        eius ad obcaecati quia tempore cum incidunt aut consequatur, quo facere
-        aspernatur, totam explicabo ducimus repudiandae eum eligendi modi iure
-        blanditiis dolor delectus at amet ab. Debitis, numquam? Repellendus
-        repellat nesciunt quaerat, numquam quam distinctio ex deserunt molestiae
-        exercitationem nam nisi nobis veritatis sapiente magni vero assumenda
-        minus quia culpa nulla maxime aut. Aspernatur repudiandae sunt, magnam
-        exercitationem, est deleniti harum at debitis cum dicta modi ipsam! Fuga
-        harum cumque impedit deleniti doloribus similique. Quia porro, alias rem
-        laboriosam excepturi hic explicabo, facere quaerat voluptate unde minima
-        voluptatem voluptatum dolore officiis? Optio accusamus mollitia quae
-        tempora voluptas aut eaque impedit sed, voluptatibus ipsam recusandae
-        possimus quasi. Ad ipsam at obcaecati unde quia ipsum excepturi, saepe
-        ab adipisci explicabo omnis, temporibus mollitia neque? Accusantium
-        soluta corporis tempore enim asperiores amet repellat facere, aperiam,
-        iste quis commodi harum vitae mollitia deserunt? Nobis harum atque eaque
-        tempora neque deleniti. Laudantium, dicta doloribus. Illo temporibus
-        deleniti non consectetur nisi itaque deserunt quia odit voluptatibus.
-        Neque iusto numquam ea doloribus facilis enim adipisci eveniet sit!
-        Similique dolor hic eos voluptatibus nam voluptas molestiae sit. Error
-        tenetur nostrum eius consectetur provident, obcaecati facere
-        perferendis, quibusdam ratione eum enim ex tempora dicta expedita porro
-        nesciunt illo corrupti ipsam nulla aspernatur sint autem, debitis
-        dolorem doloribus! Vero non eum tenetur distinctio debitis ad! Eius
-        nostrum consectetur rem soluta! Nobis velit harum consectetur iste.
-        Nulla doloribus sequi eaque pariatur amet! Placeat quia molestiae porro
-        nostrum obcaecati animi eius tempore atque magni facere deserunt
-        veritatis voluptate hic nihil minima nulla at, quam incidunt distinctio
-        enim dolores voluptas voluptatibus temporibus est. Pariatur laboriosam
-        quisquam iure dicta. Nulla reiciendis ipsam beatae non quos tempore cum
-        quae id illum ullam, dolor voluptatibus quis, deserunt incidunt minus,
-        explicabo temporibus optio necessitatibus. Delectus quisquam consectetur
-        perferendis tempora voluptatem deleniti, alias ratione corporis
-        molestiae iusto tempore nisi maxime similique placeat, veritatis
-        exercitationem quae, quia quam eligendi perspiciatis laborum et aliquid
-        fugit accusantium? Delectus fugit est veniam molestias culpa eveniet
-        tempora ratione corrupti similique exercitationem unde expedita, quis
-        voluptate et mollitia, dicta, nulla ex. Maiores est voluptates velit
-        error at qui enim, asperiores totam aspernatur fugiat omnis
-        exercitationem id itaque quas explicabo perferendis odio nesciunt
-        praesentium aliquam cumque a consequatur nihil corporis? Esse culpa
-        assumenda sit nobis quisquam explicabo. Fuga sint tempore dicta
-        necessitatibus incidunt nesciunt ex atque quam dignissimos consequuntur
-        natus libero, voluptatem explicabo architecto deleniti repellat unde
-        quas, ipsa sit, animi optio accusamus vitae quo! Dolores, natus!
+        
       </div>
       <!-- /Contenitore grosso a destra -->
     </main>
