--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
       </div>
 
-      <div class="footer-right">
+      <!-- <div class="footer-right">
         <div class="icon margin_right20">
           <i class="fas fa-list colorebianco"></i>
         </div>
@@ -216,7 +216,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </footer>
   </body>
 </html>
