fine contenuto (aggiustare responsive del content e finire il footer

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
       </div>
       <!-- /nav bar laterale -->
 
+
+
+
       <!-- Contenitore grosso a destra -->
       <div class="content float-lt">
         <!-- TOP MAIN -->
@@ -118,7 +121,7 @@
         <!-- /TOP MAIN -->
 
         <!-- SELEZIONE -->
-        <div class="content_nav">
+        <div class="content_nav margin_botton10">
           <ul>
             <li class="margin_right10">
               <a href="#">IN EVIDENZA</a>
@@ -149,12 +152,86 @@
         <!-- /SELEZIONE -->
 
         <!-- RECENTY PLAYED -->
+        <h2 class="margin_botton10">Recently played</h2>
+        <div class="row">
+          <ul class="album">
+            <li>
+
+                <img src="assets/img/metal_lifting.jpg" alt="">
+                <h4>Heavy Metal</h4>
+                <span>Subtitle</span>
+
+
+            </li>
+            <li>
+
+              <img src="assets/img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <span>Subtitle</span>
+
+            </li>
+            <li>
+
+              <img src="assets/img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <span>Subtitle</span>
+
+            </li>
+            <li>
+
+              <img src="assets/img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <span>Subtitle</span>
+
+            </li>
+            <li>
+
+              <img src="assets/img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <span>Subtitle</span>
+              
+            </li>
+            <li>
+
+              <img src="assets/img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <span>Subtitle</span>
+
+            </li>
+          </ul>
+        </div>
         <!-- /RECENTY PLAYED -->
 
         <!-- CREATE PER JOHN DOE -->
+        <h2>Creato per John Doe</h2>
+        <div class="row">
+          <ul class="album">
+            <li>
+              <img src="/assets/img/radar.jpeg" alt="">
+              <h4>Relase Radar</h4>
+            </li>
+            <li>
+              <img src="assets/img/mixdaily.jpeg" alt="">
+              <h4>Daily Mix 1</h4>
+            </li>
+          </ul>
+        </div>
         <!-- /CREATE PER JOHN DOE -->
 
         <!-- ARTISTI PIU' POPOLARI -->
+        <h2>Artisti più popolari</h2>
+        <div class="row">
+          <ul class="album">
+            <li>  
+              <img src="assets/img/youg.jpeg" alt="">
+              <h4>Lana del ray</h4>
+            </li>
+            <li>
+              <img src="assets/img/einaudi.jpeg" alt="">
+              <h4>Ludovico Einaudi</h4>
+            </li>
+          </ul>
+        </div>
         <!-- /ARTISTI PIU' POPOLARI -->
         
       </div>
