errore responsive content finire footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="margin_left20 nav_lm" src="assets/img/logo-small.svg" alt="" />
           </div>
           <!-- primo menu con le immagini  -->
-          <ul class="margin_botton20">
+          <ul class="margin_bottom20">
             <li>
               <img class="margin_left20" src="assets/img/home.svg" alt="" />
               <a>Home</a>
@@ -57,8 +57,8 @@
 
           <div class="playlist">
 
-            <h4 class="colorebianco margin_left20 margin_botton10">PLAYLIST</h4>
-            <div class="New_p margin_botton10 margin_left20"> 
+            <h4 class="colorebianco margin_left20 margin_bottom10">PLAYLIST</h4>
+            <div class="New_p margin_bottom10 margin_left20"> 
               <span class="colorebianco">Crea Playlist</span>
             </div>
             <div class="playlist_name">
@@ -92,7 +92,7 @@
         </div>
         <!-- /parte superiore della navbar laterale -->
 
-        <div class="s_nav_botton">
+        <div class="s_nav_bottom">
           <div class="installa_app coloregrigio">
             <i class="far fa-arrow-alt-circle-down"></i>
             <span> Installa app</span>
@@ -121,7 +121,7 @@
         <!-- /TOP MAIN -->
 
         <!-- SELEZIONE -->
-        <div class="content_nav margin_botton10">
+        <div class="content_nav margin_bottom10">
           <ul>
             <li class="margin_right10">
               <a href="#">IN EVIDENZA</a>
@@ -152,12 +152,12 @@
         <!-- /SELEZIONE -->
 
         <!-- RECENTY PLAYED -->
-        <h2 class="margin_botton10">Recently played</h2>
+        <h2 class="margin_bottom30">Recently played</h2>
         <div class="row">
           <ul class="album">
             <li>
 
-                <img src="assets/img/metal_lifting.jpg" alt="">
+                <img class="margin_bottom10" src="assets/img/metal_lifting.jpg" alt="">
                 <h4>Heavy Metal</h4>
                 <span>Subtitle</span>
 
@@ -165,35 +165,35 @@
             </li>
             <li>
 
-              <img src="assets/img/metal_lifting.jpg" alt="">
+              <img class="margin_bottom10" src="assets/img/metal_lifting.jpg" alt="">
               <h4>Heavy Metal</h4>
               <span>Subtitle</span>
 
             </li>
             <li>
 
-              <img src="assets/img/metal_lifting.jpg" alt="">
+              <img class="margin_bottom10" src="assets/img/metal_lifting.jpg" alt="">
               <h4>Heavy Metal</h4>
               <span>Subtitle</span>
 
             </li>
             <li>
 
-              <img src="assets/img/metal_lifting.jpg" alt="">
+              <img class="margin_bottom10" src="assets/img/metal_lifting.jpg" alt="">
               <h4>Heavy Metal</h4>
               <span>Subtitle</span>
 
             </li>
             <li>
 
-              <img src="assets/img/metal_lifting.jpg" alt="">
+              <img class="margin_bottom10" src="assets/img/metal_lifting.jpg" alt="">
               <h4>Heavy Metal</h4>
               <span>Subtitle</span>
               
             </li>
             <li>
 
-              <img src="assets/img/metal_lifting.jpg" alt="">
+              <img class="margin_bottom10" src="assets/img/metal_lifting.jpg" alt="">
               <h4>Heavy Metal</h4>
               <span>Subtitle</span>
 
@@ -203,15 +203,16 @@
         <!-- /RECENTY PLAYED -->
 
         <!-- CREATE PER JOHN DOE -->
-        <h2>Creato per John Doe</h2>
-        <div class="row">
+        <h2 >Creato per John Doe</h2>
+        <span>Più ascolti, più accurati saranno i suggerimenti</span>
+        <div class="row margin_top30">
           <ul class="album">
             <li>
-              <img src="/assets/img/radar.jpeg" alt="">
+              <img class="margin_bottom10" src="/assets/img/radar.jpeg" alt="">
               <h4>Relase Radar</h4>
             </li>
             <li>
-              <img src="assets/img/mixdaily.jpeg" alt="">
+              <img class="margin_bottom10" src="assets/img/mixdaily.jpeg" alt="">
               <h4>Daily Mix 1</h4>
             </li>
           </ul>
@@ -219,15 +220,15 @@
         <!-- /CREATE PER JOHN DOE -->
 
         <!-- ARTISTI PIU' POPOLARI -->
-        <h2>Artisti più popolari</h2>
+        <h2 class="margin_bottom30">Artisti più popolari</h2>
         <div class="row">
           <ul class="album">
             <li>  
-              <img src="assets/img/youg.jpeg" alt="">
+              <img class="margin_bottom10" src="assets/img/youg.jpeg" alt="">
               <h4>Lana del ray</h4>
             </li>
             <li>
-              <img src="assets/img/einaudi.jpeg" alt="">
+              <img class="margin_bottom10" src="assets/img/einaudi.jpeg" alt="">
               <h4>Ludovico Einaudi</h4>
             </li>
           </ul>
